tests/baselines/reference/nodeModulesPackagePatternExportsExclude(module=nodenext).errors.txt
tests/cases/conformance/node/index.cts(2,23): error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/index.cts(3,23): error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/index.cts(4,24): error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/index.cts(9,24): error TS1471: Module 'inner/mjs/index' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
tests/cases/conformance/node/index.mts(2,23): error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/index.mts(3,23): error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/index.mts(4,24): error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/index.ts(2,23): error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/index.ts(3,23): error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/index.ts(4,24): error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/node_modules/inner/exclude/index.d.cts(2,22): error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/node_modules/inner/exclude/index.d.cts(3,22): error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/node_modules/inner/exclude/index.d.cts(4,23): error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/node_modules/inner/exclude/index.d.mts(2,22): error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/node_modules/inner/exclude/index.d.mts(3,22): error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/node_modules/inner/exclude/index.d.mts(4,23): error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/node_modules/inner/exclude/index.d.ts(2,22): error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/node_modules/inner/exclude/index.d.ts(3,22): error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/node_modules/inner/exclude/index.d.ts(4,23): error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
tests/cases/conformance/node/node_modules/inner/index.d.cts(3,22): error TS1471: Module 'inner/mjs/index' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
tests/cases/conformance/node/node_modules/inner/index.d.ts(2,13): error TS2303: Circular definition of import alias 'cjs'.
tests/cases/conformance/node/node_modules/inner/index.d.ts(3,22): error TS1471: Module 'inner/mjs/index' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.


==== tests/cases/conformance/node/index.ts (3 errors) ====
    // esm format file
    import * as cjsi from "inner/cjs/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
    import * as mjsi from "inner/mjs/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
    import * as typei from "inner/js/exclude/index";
                           ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
    cjsi;
    mjsi;
    typei;
    import * as cjsi2 from "inner/cjs/index";
    import * as mjsi2 from "inner/mjs/index";
    import * as typei2 from "inner/js/index";
    cjsi2;
    mjsi2;
    typei2;
==== tests/cases/conformance/node/index.mts (3 errors) ====
    // esm format file
    import * as cjsi from "inner/cjs/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
    import * as mjsi from "inner/mjs/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
    import * as typei from "inner/js/exclude/index";
                           ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
    cjsi;
    mjsi;
    typei;
    import * as cjsi2 from "inner/cjs/index";
    import * as mjsi2 from "inner/mjs/index";
    import * as typei2 from "inner/js/index";
    cjsi2;
    mjsi2;
    typei2;
==== tests/cases/conformance/node/index.cts (4 errors) ====
    // cjs format file
    import * as cjsi from "inner/cjs/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
    import * as mjsi from "inner/mjs/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
    import * as typei from "inner/js/exclude/index";
                           ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
    cjsi;
    mjsi;
    typei;
    import * as cjsi2 from "inner/cjs/index";
    import * as mjsi2 from "inner/mjs/index";
                           ~~~~~~~~~~~~~~~~~
!!! error TS1471: Module 'inner/mjs/index' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import * as typei2 from "inner/js/index";
    cjsi2;
    mjsi2;
    typei2;
==== tests/cases/conformance/node/node_modules/inner/exclude/index.d.ts (3 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/exclude/index";
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
    import * as mjs from "inner/mjs/exclude/index";
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
    import * as type from "inner/js/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
    export { cjs };
    export { mjs };
    export { type };
==== tests/cases/conformance/node/node_modules/inner/exclude/index.d.mts (3 errors) ====
    // esm format file
    import * as cjs from "inner/cjs/exclude/index";
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
    import * as mjs from "inner/mjs/exclude/index";
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
    import * as type from "inner/js/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
    export { cjs };
    export { mjs };
    export { type };
==== tests/cases/conformance/node/node_modules/inner/exclude/index.d.cts (3 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/exclude/index";
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/cjs/exclude/index' or its corresponding type declarations.
    import * as mjs from "inner/mjs/exclude/index";
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/mjs/exclude/index' or its corresponding type declarations.
    import * as type from "inner/js/exclude/index";
                          ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/js/exclude/index' or its corresponding type declarations.
    export { cjs };
    export { mjs };
    export { type };
==== tests/cases/conformance/node/node_modules/inner/index.d.ts (2 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/index";
                ~~~
!!! error TS2303: Circular definition of import alias 'cjs'.
    import * as mjs from "inner/mjs/index";
                         ~~~~~~~~~~~~~~~~~
!!! error TS1471: Module 'inner/mjs/index' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
    export { type };
==== tests/cases/conformance/node/node_modules/inner/index.d.mts (0 errors) ====
    // esm format file
    import * as cjs from "inner/cjs/index";
    import * as mjs from "inner/mjs/index";
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
    export { type };
==== tests/cases/conformance/node/node_modules/inner/index.d.cts (1 errors) ====
    // cjs format file
    import * as cjs from "inner/cjs/index";
    import * as mjs from "inner/mjs/index";
                         ~~~~~~~~~~~~~~~~~
!!! error TS1471: Module 'inner/mjs/index' cannot be imported using this construct. The specifier only resolves to an ES module, which cannot be imported synchronously. Use dynamic import instead.
    import * as type from "inner/js/index";
    export { cjs };
    export { mjs };
    export { type };
==== tests/cases/conformance/node/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== tests/cases/conformance/node/node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./cjs/*": "./*.cjs",
            "./cjs/exclude/*": null,
            "./mjs/*": "./*.mjs",
            "./mjs/exclude/*": null,
            "./js/*": "./*.js",
            "./js/exclude/*": null
        }
    } 